--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,14 @@
 :root {
     /* Settings */
     --spacing: 15px;
-    --font-size: 1.15rem;
+    --font-size: 1.35rem;
     /* Normal Colors */
-    --background-color: white;
-    --alt-background-color: gainsboro;
-    --font-color: black;
-    --alt-font-color: darkslategray;
+    --background-color: #CCF6EE;
+    --alt-background-color: #86DEB7;
+    --font-color: #38502A;
+    --alt-font-color: #2C634C;
     --border-color: black;
+    --navigation-color: #a1cfdb;
     /* Dark Mode Colors */
     --dark-background-color: black;
     --dark-alt-background-color: darkslategray;
@@ -28,12 +29,13 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 62.5%;
+    font-family: 'DotGothic16', sans-serif;
 }
 
 header {
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr auto;
     font-size: var(--font-size);
     padding: var(--spacing);
     border-bottom: 1px solid var(--border-color);
@@ -41,26 +43,40 @@ header {
     background-color: var(--alt-background-color);
 }
 
+#logo-wrapper {
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto Mono', monospace;
+    text-align: center;
+}
+
 header a {
+    text-decoration: none;
+    display: block;
     color: var(--alt-font-color);
 }
 
 header nav {
     display: flex;
     align-items: center;
-    margin-left: auto;
+    margin: -15px -15px -15px auto;
+    background-color: var(--navigation-color);
 }
 
 header nav ul {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     list-style-type: none;
 }
 
 header nav ul li {
-    display: inline-block;
-    padding: 7.5px;
-    margin-right: 7.5px;
+    display: block;
+    padding: 3px;
+    margin: 5px;
+    border: 0 solid;
+    border-radius: 10px;
+    background-color: var(--background-color);
+    text-align: center;
 }
 
 main {
@@ -69,6 +85,29 @@ main {
     padding: var(--spacing);
     color: var(--font-color);
     background-color: var(--background-color);
+}
+
+section#home-content {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+}
+
+section div {
+    padding: 15px;
+}
+
+div#welcome {
+    grid-column: 1/3;
+}
+
+h1 {
+    font-family: 'Roboto Mono', monospace;
+}
+
+h2 {
+    font-family: 'Roboto Mono', monospace;
 }
 
 footer {
@@ -83,39 +122,50 @@ footer {
 }
 
 footer a {
+    text-decoration: none;
     color: var(--alt-font-color);
 }
 
 footer #legal {
     grid-row: 1;
-    grid-column: 1;
+    grid-column: 2;
     display: flex;
     align-items: center;
+    justify-content: center;
+    font-family: 'Roboto Mono', monospace;
 }
 
 footer nav {
     grid-row: 1;
-    grid-column: 2;
+    grid-column: 1;
     display: flex;
     align-items: center;
     margin-left: auto;
+    margin: -15px auto -15px -15px;
+    background-color: var(--navigation-color);
 }
 
 footer nav ul {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     list-style-type: none;
 }
 
 footer nav ul li {
-    display: inline-block;
-    padding: 7.5px;
-    margin-right: 7.5px;
+    display: block;
+    padding: 3px;
+    margin: 5px;
+    border: 0 solid;
+    border-radius: 10px;
+    background-color: var(--background-color);
+    text-align: center;
 }
 
 footer #dark-mode {
     grid-row: 1;
     grid-column: 3;
+    margin-left: auto;
+    padding-top: 10px;
 }
 
 footer #dark-mode .icon {
