--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ html, body {
     width: 100%;
     height: 100%;
     text-rendering: optimizeLegibility;
+    background-color: var(--background-color);
 }
 
 body {
@@ -85,6 +86,8 @@ main {
     padding: var(--spacing);
     color: var(--font-color);
     background-color: var(--background-color);
+    max-width: 1400px;
+    margin: auto;
 }
 
 section#home-content {
