--- a/css/main.css
+++ b/css/main.css
@@ -91,10 +91,12 @@ main {
 }
 
 section#home-content {
+    display: flex;
+    align-items: center;
+    text-align: center;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
-    text-align: center;
 }
 
 section div {
@@ -105,12 +107,88 @@ div#welcome {
     grid-column: 1/3;
 }
 
-h1 {
+h1,h2,h3 {
     font-family: 'Roboto Mono', monospace;
 }
 
-h2 {
-    font-family: 'Roboto Mono', monospace;
+#contact-us-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#contact-us-intro {
+    text-align: center;
+}
+
+form#contact-form {
+    border: 1px solid var(--border-color);
+    padding: 15px;
+    max-width: 1000px;
+    justify-self: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: var(--alt-background-color);
+    color: var(--alt-font-color);
+}
+
+input,textarea {
+    margin-top: 10px;
+    padding: 5px;
+    background-color: var(--background-color);
+    color: var(--font-color);
+}
+
+#subject,#message {
+    width: 100%;
+}
+
+#contact-name {
+    grid-column: 1/3;
+    grid-row: 1;
+    justify-self: center;
+}
+
+#contact-subject {
+    grid-column: 1/3;
+    grid-row: 2;
+}
+
+#contact-message {
+    grid-column: 1/3;
+    grid-row: 3;
+}
+
+#contact-question {
+    grid-column: 1/3;
+    grid-row: 4;
+}
+
+#contact-email {
+    grid-column: 1;
+    grid-row: 5;
+}
+
+#contact-phone {
+    grid-column: 2;
+    grid-row: 5;
+}
+
+.contact-info {
+    display: none;
+    opacity: 0;
+}
+
+.radio:checked+.contact-info {
+    display: block;
+    opacity: 1;
+}
+
+#contact-form-submit {
+    grid-column: 1/3;
+    grid-row: 7;
+    padding: 5px;
+    justify-self: center;
 }
 
 footer {
