--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ div#welcome {
     grid-column: 1/3;
 }
 
-h1,h2,h3 {
+h1,h2,h3,h4 {
     font-family: 'Roboto Mono', monospace;
 }
 
@@ -124,7 +124,7 @@ h1,h2,h3 {
 form#contact-form {
     border: 1px solid var(--border-color);
     padding: 15px;
-    max-width: 1000px;
+    max-width: 1100px;
     justify-self: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -190,6 +190,56 @@ input,textarea {
     padding: 5px;
     justify-self: center;
 }
+
+#contact-form-message {
+    grid-column: 1/3;
+    grid-row: 8;
+    padding: 5px;
+    justify-self: center;
+}
+
+#about-us-content>img {
+    float: left;
+    margin: 0 25px 25px 0;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    float: left;
+}
+
+.cards>p {
+    display: flex;
+    align-items: center;
+}
+
+#staff {
+    text-align: center;
+}
+
+.col-1 {
+    grid-column: 1;
+}
+
+.col-2 {
+    grid-column: 2;
+}
+
+.card {
+    padding: 0;
+    margin: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
+  }
 
 footer {
     display: grid;
