--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
     --dark-font-color: #35C081;
     --dark-alt-font-color: #56DCC6;
     --dark-border-color: white;
-    --dark-navigation-color: ;
+    --dark-navigation-color: #366f7e;
 }
 
 html, body {
@@ -24,7 +24,7 @@ html, body {
     width: 100%;
     height: 100%;
     text-rendering: optimizeLegibility;
-    background-color: var(--background-color);
+    
 }
 
 body {
@@ -32,6 +32,7 @@ body {
     flex-direction: column;
     font-size: 62.5%;
     font-family: 'DotGothic16', sans-serif;
+    background-color: var(--background-color);
 }
 
 header {
@@ -112,7 +113,7 @@ div#welcome {
     grid-column: 1/3;
 }
 
-h1,h2,h3,h4 {
+h1,h2,h3,h4,th {
     font-family: 'Roboto Mono', monospace;
 }
 
@@ -128,6 +129,7 @@ h1,h2,h3,h4 {
 
 form#contact-form {
     border: 1px solid var(--border-color);
+    border-radius: 5px;;
     padding: 15px;
     max-width: 1100px;
     justify-self: center;
@@ -135,6 +137,11 @@ form#contact-form {
     grid-template-columns: 1fr 1fr;
     background-color: var(--alt-background-color);
     color: var(--alt-font-color);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+form#contact-form.hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 input,textarea {
@@ -203,14 +210,13 @@ input,textarea {
     justify-self: center;
 }
 
-#about-us-content>img {
+#about-us-intro>img {
     float: left;
     margin: 0 25px 25px 0;
 }
 
-#about-us-content {
-    display: flex;
-    align-items: center;
+#about-us-intro h1{
+    margin-bottom: -10px;
 }
 
 .cards {
@@ -239,8 +245,8 @@ input,textarea {
 .card {
     padding: 0;
     margin: 15px;
+    max-width: 250px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
 }
 
 .card:hover {
@@ -250,6 +256,95 @@ input,textarea {
 .container {
     padding: 2px 16px;
   }
+
+#services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#service-intro {
+    text-align: center;
+}
+
+#service-list {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    width: 1000px;
+}
+
+#service-list > div {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-column {
+    text-align: left;
+}
+
+.right-column {
+    text-align: right;
+}
+
+table {
+    text-align: left;
+    border-collapse: collapse;
+    width: 1000px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 10px;
+}
+
+table:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+table th {
+    white-space: nowrap;
+    background-color: var(--background-color);
+    border-bottom: 1px solid var(--border-color);
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+}
+
+table tr:nth-child(even) {
+    background-color: var(--alt-background-color);
+    color: var(--alt-font-color);
+  }
+
+table td {
+    padding: 3px;
+}
+
+#gifts-intro {
+    text-align: center;
+}
+
+#gifts-list {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+}
+
+#gifts-contact {
+    text-align: right;
+}
+
+#wireframes {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+}
+
+#wireframes > div:first-child {
+    grid-column: 1/4;
+}
+.wireframe {
+    display: inline-flex;
+    align-items: center;
+}
 
 footer {
     display: grid;
@@ -420,10 +515,43 @@ body.dark-mode #logo-dark {
     justify-self: center;
 }
 
+body.dark-mode header nav {
+    background-color: var(--dark-navigation-color);
+}
+
+body.dark-mode header nav ul li {
+    background-color: var(--dark-background-color);
+}
+
+body.dark-mode {
+    background-color: var(--dark-background-color);
+}
+
 body.dark-mode main {
     color: var(--dark-font-color);
     background-color: var(--dark-background-color);
 }
+
+body.dark-mode form#contact-form {
+    border: 1px solid var(--dark-border-color);
+    background-color: var(--dark-alt-background-color);
+    color: var(--dark-alt-font-color);
+}
+
+body.dark-mode input, body.dark-mode textarea {
+    background-color: var(--dark-background-color);
+    color: var(--dark-font-color);
+}
+
+body.dark-mode table th {
+    background-color: var(--dark-background-color);
+    border-bottom: 1px solid var(--dark-border-color);
+}
+
+body.dark-mode table tr:nth-child(even) {
+    background-color: var(--dark-alt-background-color);
+    color: var(--dark-alt-font-color);
+  }
 
 body.dark-mode footer {
     border-top: 1px solid var(--dark-border-color);
@@ -433,6 +561,14 @@ body.dark-mode footer {
 
 body.dark-mode footer a {
     color: var(--dark-alt-font-color);
+}
+
+body.dark-mode footer nav {
+    background-color: var(--dark-navigation-color);
+}
+
+body.dark-mode footer nav ul li {
+    background-color: var(--dark-background-color);
 }
 
 body.dark-mode footer #dark-mode .icon svg path {
