--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,6 @@ main {
 section#home-content {
     display: flex;
     align-items: center;
-    text-align: center;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
@@ -111,6 +110,11 @@ section div {
 
 div#welcome {
     grid-column: 1/3;
+    text-align: center;
+}
+
+.home-description {
+    text-align: center;
 }
 
 h1,h2,h3,h4,th {
@@ -138,6 +142,10 @@ form#contact-form {
     background-color: var(--alt-background-color);
     color: var(--alt-font-color);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+#contact-form>h3 {
+    color: var(--font-color);
 }
 
 form#contact-form.hover {
@@ -220,14 +228,16 @@ input,textarea {
 }
 
 .cards {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    float: left;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 
+
 .cards>p {
-    display: flex;
-    align-items: center;
+    min-width: 850px;
+    max-width: 1000px;
 }
 
 #staff {
@@ -243,6 +253,7 @@ input,textarea {
 }
 
 .card {
+    float: left;
     padding: 0;
     margin: 15px;
     max-width: 250px;
@@ -341,6 +352,7 @@ table td {
 #wireframes > div:first-child {
     grid-column: 1/4;
 }
+
 .wireframe {
     display: inline-flex;
     align-items: center;
@@ -536,6 +548,10 @@ body.dark-mode form#contact-form {
     border: 1px solid var(--dark-border-color);
     background-color: var(--dark-alt-background-color);
     color: var(--dark-alt-font-color);
+}
+
+body.dark-mode #contact-form>h3 {
+    color: var(--dark-font-color);
 }
 
 body.dark-mode input, body.dark-mode textarea {
