--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,11 @@ header {
     justify-content: center;
     font-family: 'Roboto Mono', monospace;
     text-align: center;
+    height: 139px;
+}
+
+#logo-wrapper > a {
+
 }
 
 #logo-dark {
@@ -244,15 +249,12 @@ input,textarea {
     text-align: center;
 }
 
-.col-1 {
-    grid-column: 1;
-}
-
 .col-2 {
     grid-column: 2;
 }
 
 .card {
+    grid-column: 1;
     float: left;
     padding: 0;
     margin: 15px;
